--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
-        "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
+        "nocompromises/php-cs-fixer-config": "^1.0",
         "nunomaduro/collision": "^8.0",
         "phpunit/phpunit": "^11.0.1"
     },
